# styxdefs

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  index.html  pyproject.toml  search.js  styxdefs.html
.github/workflows/: docs.yaml  publish-pypi.yaml
src/styxdefs/: __init__.py  dry_runner.py  dummy_runner.py  global_state.py  local_runner.py  runner.py  types.py
tests/: test_dummy.py  test_global_state.py  test_local_runner.py  test_types.py
