[tool.poetry]
name = "styxdefs"
version = "0.1.6"
description = "Styx definitions and minimal runtime"
authors = ["Florian Rupprecht <33600480+nx10@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "styxdefs", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
ruff = "^0.5.1"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.5.0"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I", "UP"]
ignore = [
  "ANN101",  # self should not be annotated.
  "ANN102"  # cls should not be annotated.
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
