[project]
name = "styxdefs"
version = "0.5.0"
description = "Styx definitions and minimal runtime"
authors = [
  { name = "Florian Rupprecht", email = "33600480+nx10@users.noreply.github.com" },
]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"

[dependency-groups]
dev = [
  "pytest>=8.2.1,<9",
  "mypy>=1.10.0,<2",
  "pre-commit>=4.0.1,<5",
  "pytest-cov>=6.0.0,<7",
  "ruff>=0.9.6,<0.10",
]
docs = ["pdoc>=15.0.0,<16"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I", "UP"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []
